# Simple-Transcriber

./: .gitignore  CHANGELOG.md  README.md  gradle.properties  models.json  settings.gradle.kts
.github/workflows/: release.yml
app/: build.gradle.kts  proguard-rules.pro
app/debug/: output-metadata.json
app/src/debug/res/values/: strings.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/whisper/: CMakeLists.txt  jni.cpp
app/src/main/java/com/anomalyzed/simpletranscriber/: MainActivity.kt  MainViewModel.kt  TranscriberViewModel.kt  TranscriptionManager.kt  TranscriptionService.kt
app/src/main/java/com/anomalyzed/simpletranscriber/data/: ModelInfo.kt  ModelRepository.kt  PreferenceManager.kt  TranscriptionData.kt  TranscriptionStateStore.kt
app/src/main/java/com/anomalyzed/simpletranscriber/engine/: AICoreEngine.kt  AudioPreprocessor.kt  CloudEngine.kt  ErrorHumanizer.kt  LiteRTEngine.kt  TranscriptionEngine.kt  WhisperCppEngine.kt
app/src/main/java/com/anomalyzed/simpletranscriber/ui/: TranscriberScreen.kt
app/src/main/java/com/anomalyzed/simpletranscriber/ui/screens/: HistoryScreen.kt  ModelManagerScreen.kt  SettingsScreen.kt
app/src/main/java/com/anomalyzed/simpletranscriber/updater/: ApkUpdateVerifier.kt  AppUpdater.kt  DownloadReceiver.kt  UpdateInfo.kt  UpdateIntegrity.kt
app/src/main/java/com/anomalyzed/simpletranscriber/whisper/: WhisperContext.kt  WhisperCpuConfig.kt
app/src/main/java/com/example/simpletranscriberapp/: MainActivity.kt  MainViewModel.kt  TranscriberViewModel.kt  TranscriptionManager.kt  TranscriptionService.kt
app/src/main/java/com/example/simpletranscriberapp/data/: ModelInfo.kt  ModelRepository.kt  PreferenceManager.kt  TranscriptionData.kt
app/src/main/java/com/example/simpletranscriberapp/engine/: AICoreEngine.kt  AudioPreprocessor.kt  CloudEngine.kt  LiteRTEngine.kt  TranscriptionEngine.kt
app/src/main/java/com/example/simpletranscriberapp/ui/: TranscriberScreen.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
app/src/test/java/com/anomalyzed/simpletranscriber/: SecurityManifestTest.kt
app/src/test/java/com/anomalyzed/simpletranscriber/updater/: UpdateIntegrityTest.kt
docs/: 01-overview.md  02-structure.md  03-setup.md  04-deployment.md  04-training-pipeline.md  05-model-serving.md  05-transcription-engines.md  06-data-persistence.md  06-data-schema.md  07-evaluation.md  08-deployment.md  README.md
docs/superpowers/specs/: 2026-06-28-notification-and-metadata-fix.md  2026-06-28-notification-tap-fix-design.md
gradle/: libs.versions.toml
(+11 files in other folders)
